--- a/PerfectPrediction/Web.Release.config
+++ b/PerfectPrediction/Web.Release.config
@@ -14,6 +14,11 @@
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
   -->
+	<connectionStrings>
+		<add name="ConnectionString" 
+			connectionString="Server=db835608298.hosting-data.io;Database=db835608298;User Id=dbo835608298;Password=U#GKTvr9uPN#6Cba#BmwSUk;
+"           xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
+	</connectionStrings>
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <!--
