--- a/PerfectPrediction/PerfectPrediction.csproj
+++ b/PerfectPrediction/PerfectPrediction.csproj
@@ -77,6 +77,7 @@
     </Content>
     <Content Include="dashboard.aspx" />
     <Content Include="default.aspx" />
+    <Content Include="Global.asax" />
     <Content Include="login.aspx" />
     <Content Include="StyleSheet.css" />
     <Content Include="StyleSheetDashboard.css" />
@@ -97,6 +98,9 @@
     </Compile>
     <Compile Include="default.aspx.designer.cs">
       <DependentUpon>default.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Global.asax.cs">
+      <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="ImageUtility.cs" />
     <Compile Include="login.aspx.cs">
