--- a/.gitignore
+++ b/.gitignore
@@ -400,3 +400,4 @@ PerfectPrediction/images/team/Thumbs.db
 
 PerfectPrediction/images/team/*
 PerfectPrediction/images/sponsor/*
+PerfectPrediction/Web.config
